[package]
name = "TheMill_internal"
version = "0.19.4"
edition = "2024"
authors = ["V. Ageno <valerioageno@yahoo.it>"]
description = "Superfast React fullstack framework"
homepage = "https://TheMill.dev"
keywords = [ "react", "typescript", "fullstack", "web", "ssr"]
repository = "https://github.com/TheJackMan33/TheMill"
readme = "../../README.md"
license-file = "../../LICENSE.md"
categories = ["web-programming"]
include = [
		"src/**/*.rs",
		"Cargo.toml"
]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"

[dev-dependencies]
fs_extra = "1.3.0"
tempfile = "3.14.0"
assert_cmd = "2.0.16"
serial_test = "3.0.0"
